# gollem

./: .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CONTEXT_TRACE_PLAN.md  CONTRIBUTING.md  Makefile  README.md  agent.go  agent_middleware.go  agent_middleware_test.go  agent_test.go  agenttool.go  agenttool_test.go  autocontext.go  autocontext_test.go  batch.go  batch_test.go  cache.go  cache_test.go  cliff.toml  compose.go  compose_test.go  condition.go  condition_test.go  cost.go  cost_test.go  deferred.go  deferred_test.go  deps.go  deps_test.go  doc.go  errors.go  eventbus.go  eventbus_test.go  example_test.go  fallback.go  fallback_test.go  go.mod  go.sum  (+69 more)
.claude/: ralph-loop.local.md  settings.local.json
harbor/: .gitignore  README.md  bootstrap-cloud-runner.sh  check-progress.sh  langfuse-tag-scores.sh  langsmith-tag-scores.sh  pyproject.toml  run-eval.sh  run-official-leaderboard.sh  tail-logs.sh
harbor/artifacts/: gpt2.c  gpt2.py
harbor/gollem_harbor/: __init__.py  agent.py
harbor/gollem_harbor/templates/: install.sh.j2
harbor/jobs/2026-02-21__02-45-14/: config.json  result.json
harbor/jobs/2026-02-21__02-45-14/gpt2-codegolf__oMQ6MDE/: config.json  exception.txt  result.json
harbor/jobs/2026-02-21__02-45-14/llm-inference-batching-scheduler__MS4rV5G/: config.json
harbor/jobs/2026-02-21__02-56-37/: config.json
harbor/jobs/2026-02-21__02-56-37/gpt2-codegolf__RqSnPX3/: config.json
harbor/jobs/2026-02-21__02-57-31/: config.json
harbor/jobs/2026-02-21__03-03-07/: config.json
harbor/jobs/2026-02-21__03-08-10/: config.json  result.json
(+1157 files in other folders)
