[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gollem-harbor"
version = "0.1.0"
description = "Harbor adapter for the gollem coding agent (Terminal-Bench)"
requires-python = ">=3.11"
dependencies = [
    "harbor",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
